--- a/html/doxygen_crawl.html
+++ b/html/doxygen_crawl.html
@@ -113,6 +113,8 @@
 <a href="functions_vars.html"/>
 <a href="globals.html"/>
 <a href="globals_defs.html"/>
+<a href="globals_enum.html"/>
+<a href="globals_eval.html"/>
 <a href="globals_func.html"/>
 <a href="globals_vars.html"/>
 <a href="imguiloader_8cpp.html"/>
@@ -255,6 +257,13 @@
 <a href="struct_mesh_asset.html#a27c656c430749b3b3412dcafba2c7b9c"/>
 <a href="struct_mesh_asset.html#a40aac10ab4f9e8d1041ea3035336c68a"/>
 <a href="struct_mesh_asset.html#a7abaa0b660e944edd81ce5186c32d367"/>
+<a href="struct_pipeline_description-members.html"/>
+<a href="struct_pipeline_description.html"/>
+<a href="struct_pipeline_description.html#a1e4364f285960607fc426b1c65d4f10c"/>
+<a href="struct_pipeline_description.html#a27a83b13d7bfe37e04f9d6f6ea885a54"/>
+<a href="struct_pipeline_description.html#a347f470a9c49aa86269baaf45fe33f92"/>
+<a href="struct_pipeline_description.html#aaf582f4874b52239e93e32332c4fe978"/>
+<a href="struct_pipeline_description.html#aef51d94bc7d787b01948cba4ae73a8bb"/>
 <a href="struct_quad_instance-members.html"/>
 <a href="struct_quad_instance.html"/>
 <a href="struct_quad_instance.html#a071fb41c68812053137305783c23fdb4"/>
@@ -274,6 +283,12 @@
 <a href="struct_vertex_input_description.html#a4fcccc0955fe4fe30eba51cf3772dd54"/>
 <a href="struct_vertex_input_description.html#a6d37a4715dbda8d2f0c6bc1e079fc79a"/>
 <a href="struct_vertex_input_description.html#abc37590267667b7c2acccd512cdbaa02"/>
+<a href="struct_vertex_input_entry-members.html"/>
+<a href="struct_vertex_input_entry.html"/>
+<a href="struct_vertex_input_entry.html#a207631c3ebcc6f4c8c273498c88aa87a"/>
+<a href="struct_vertex_input_entry.html#a6a3f1788c04d7a93a8a94212c1e916f9"/>
+<a href="struct_vertex_input_entry.html#a9a1a54ac2971f224776dfab60b8f8925"/>
+<a href="struct_vertex_input_entry.html#ad8f71a55bacb42441048d62295939277"/>
 <a href="struct_vulkan_buffer-members.html"/>
 <a href="struct_vulkan_buffer.html"/>
 <a href="struct_vulkan_buffer.html#a12ad11d994c3ae4ea405f0bdbad6c6d4"/>
@@ -300,11 +315,26 @@
 <a href="struct_vulkan_context.html#ae9dee657116417ce484117be02e629db"/>
 <a href="struct_vulkan_context.html#aeb755842a45c87f49f7cfec259abee72"/>
 <a href="struct_vulkan_context.html#af9261e615c154b57cef82bb3970234cd"/>
+<a href="struct_vulkan_descriptor_set_entry-members.html"/>
+<a href="struct_vulkan_descriptor_set_entry.html"/>
+<a href="struct_vulkan_descriptor_set_entry.html#acf4973c53d82a53b0d9600ad09276497"/>
+<a href="struct_vulkan_descriptor_set_entry.html#af61b919249d97030e677636d09db9fab"/>
+<a href="struct_vulkan_descriptor_set_entry_binding-members.html"/>
+<a href="struct_vulkan_descriptor_set_entry_binding.html"/>
+<a href="struct_vulkan_descriptor_set_entry_binding.html#a0d2215144c7397a30160b537d8e6a6b3"/>
+<a href="struct_vulkan_descriptor_set_entry_binding.html#aacee35d9258ca83730c58fe9f8265205"/>
+<a href="struct_vulkan_descriptor_set_entry_binding.html#aee6812e97d891b4e3efa31250569d214"/>
+<a href="struct_vulkan_descriptor_set_entry_binding.html#af03e5bfc9d5b2ff5c739547e3a404012"/>
 <a href="struct_vulkan_pipeline-members.html"/>
 <a href="struct_vulkan_pipeline.html"/>
 <a href="struct_vulkan_pipeline.html#a96978a9ee9078ffd110e9c749267380e"/>
 <a href="struct_vulkan_pipeline.html#a9da70c6d0a8a8db5cffe8c79212243d2"/>
 <a href="struct_vulkan_pipeline.html#ac191be8812aabc6fe92dfc6b376e1de4"/>
+<a href="struct_vulkan_push_constant_entry-members.html"/>
+<a href="struct_vulkan_push_constant_entry.html"/>
+<a href="struct_vulkan_push_constant_entry.html#a357c7081924a4677a5fc784b4ea7eed5"/>
+<a href="struct_vulkan_push_constant_entry.html#a48c9fc2f7f0330b23d32faad449cbb3c"/>
+<a href="struct_vulkan_push_constant_entry.html#a7d3c17e96cedac4fe4d2ba24b45d0e53"/>
 <a href="struct_vulkan_swapchain-members.html"/>
 <a href="struct_vulkan_swapchain.html"/>
 <a href="struct_vulkan_swapchain.html#a7e8f1851072e6c23f32d109ff55990f9"/>
@@ -340,36 +370,44 @@
 <a href="vk__types_8h.html#a3d55e176cc77828a9adaa05ac4413b99"/>
 <a href="vk__types_8h_source.html"/>
 <a href="vulkanrender_8cpp.html"/>
-<a href="vulkanrender_8cpp.html#a08886d88b9de590bbba4d6b3bf71ef9a"/>
-<a href="vulkanrender_8cpp.html#a0c34dbe290e893fd9d2a127f6675b1e6"/>
+<a href="vulkanrender_8cpp.html#a00d014dea2b7ab9f2c3391af762e66b0"/>
 <a href="vulkanrender_8cpp.html#a0d1cb89197c94bf6ea78adb165fec25f"/>
 <a href="vulkanrender_8cpp.html#a0d6fb07041cbf50222b4c766e4cb8ac2"/>
 <a href="vulkanrender_8cpp.html#a1548a90c7370e579d421dd894f58e99c"/>
-<a href="vulkanrender_8cpp.html#a1561ed9a525bb7c26ab677b00d290d8d"/>
 <a href="vulkanrender_8cpp.html#a1e6b28ad04c70256742921763e5400a5"/>
+<a href="vulkanrender_8cpp.html#a24e1995b2fd71347838ae38f3c6fea84"/>
+<a href="vulkanrender_8cpp.html#a24f69fca2f5cc2aa5e019010ddc5b484"/>
 <a href="vulkanrender_8cpp.html#a2a3553a472280be4e35db92610d06c2f"/>
 <a href="vulkanrender_8cpp.html#a2bb55417a01c7a6290f3924810bddeda"/>
 <a href="vulkanrender_8cpp.html#a318c1b57647d7ba05ed88a48c2a88040"/>
 <a href="vulkanrender_8cpp.html#a3217acc9533924f0e36f28c310dbdf1f"/>
 <a href="vulkanrender_8cpp.html#a381477015eca07378a107b0cc5a6573f"/>
+<a href="vulkanrender_8cpp.html#a406885375823f11e053804b0ba529907"/>
 <a href="vulkanrender_8cpp.html#a4ed7d71d4c4f0869f1680dd5e6e7d7ac"/>
+<a href="vulkanrender_8cpp.html#a507decebf3db6ecaa244968be2119792"/>
 <a href="vulkanrender_8cpp.html#a65e222cd8f196e5187f23a118bbbf05a"/>
 <a href="vulkanrender_8cpp.html#a6a9f6e3083c777a9159f84633ca38b8f"/>
 <a href="vulkanrender_8cpp.html#a6b3e2de21553e03e5af66a9d20691aad"/>
 <a href="vulkanrender_8cpp.html#a6b74ed8c15b9169a484e75d58eb1056d"/>
 <a href="vulkanrender_8cpp.html#a6f37b506c8713de46016091603864172"/>
+<a href="vulkanrender_8cpp.html#a71658c46fbcfbe91e0cd7630170063d9"/>
 <a href="vulkanrender_8cpp.html#a721ddd128a758de2fd3dfc0b665af665"/>
 <a href="vulkanrender_8cpp.html#a72f80b60e1cedc99d610c1439ca83cda"/>
 <a href="vulkanrender_8cpp.html#a78483f4a055f19eb908f14b76eb2f3f2"/>
 <a href="vulkanrender_8cpp.html#a7aa9448dd366e42dcb31a30b768cbbc8"/>
 <a href="vulkanrender_8cpp.html#a7c4be072e8d4e761218189a2e3ba3f1c"/>
-<a href="vulkanrender_8cpp.html#a855070ecd52ecca745a2d84fd5a1cf4a"/>
+<a href="vulkanrender_8cpp.html#a7d035a70c5fb68440679d0b39cfd6b1d"/>
+<a href="vulkanrender_8cpp.html#a841c18c9a8da1ac6314e17903e94a429"/>
+<a href="vulkanrender_8cpp.html#a89a24f7144403f8173dbeb63ecef6dd2"/>
 <a href="vulkanrender_8cpp.html#a8acecdfbe0a6b9fbc57e1170c48946d3"/>
 <a href="vulkanrender_8cpp.html#a8e2f89feed9386542aa9f9e4e31d787c"/>
+<a href="vulkanrender_8cpp.html#a920cb5f1ff4c306676528a4814ec9d12"/>
+<a href="vulkanrender_8cpp.html#a933b089ad1fb9f1faea66ba63de20e5f"/>
 <a href="vulkanrender_8cpp.html#a9597f77aab2d4f3b47a4aa36aec497f9"/>
 <a href="vulkanrender_8cpp.html#a974917ae24bed252b5daea18004d4481"/>
 <a href="vulkanrender_8cpp.html#a9844c5ce2463533bf2de0a0e03634742"/>
 <a href="vulkanrender_8cpp.html#a989be972b60eb850d7a2fdc15b97874d"/>
+<a href="vulkanrender_8cpp.html#a98eb50f37a16b7a78c11cd0735087ec6"/>
 <a href="vulkanrender_8cpp.html#a9940e1da7113cbdaab72d3cb89fccf11"/>
 <a href="vulkanrender_8cpp.html#a9e4232aa75f0838152c18f4bf71fff57"/>
 <a href="vulkanrender_8cpp.html#aa243c038a690e54662217292834f4d4d"/>
@@ -377,35 +415,57 @@
 <a href="vulkanrender_8cpp.html#aaeae770242332e3929d26839f54d9722"/>
 <a href="vulkanrender_8cpp.html#ab09e5f19ab278c5c8596722d34ad526d"/>
 <a href="vulkanrender_8cpp.html#ab16b70eddff3b4e586bb82859fa0a088"/>
-<a href="vulkanrender_8cpp.html#ab1721972318e7e714458ba9028f0e6dd"/>
+<a href="vulkanrender_8cpp.html#ab2b19d31b9ec32760c14fafe33585a5f"/>
+<a href="vulkanrender_8cpp.html#ab3f83fd1aa7a8f26e7f6aa4a683bc514"/>
 <a href="vulkanrender_8cpp.html#abb708591f76a2c8c44a471e5927c78e2"/>
 <a href="vulkanrender_8cpp.html#ac29ee6aec8b14acccd7a6bbfd4afbabd"/>
 <a href="vulkanrender_8cpp.html#acb41327afba5de4cae4857087b7081e3"/>
 <a href="vulkanrender_8cpp.html#acfc5b96774dcdc8b2e6742370ff9b6cd"/>
 <a href="vulkanrender_8cpp.html#ad7d1cc267b9187c1a31ad4a4ebccbcf0"/>
 <a href="vulkanrender_8cpp.html#add5f338c39fa5f1fba7f9756fa30c127"/>
+<a href="vulkanrender_8cpp.html#ade8f5cc6a63bf27b5b733063573bb523"/>
+<a href="vulkanrender_8cpp.html#ae051a6b921da6602135ec5f8fa1ad829"/>
+<a href="vulkanrender_8cpp.html#ae10eea2bc605fe9f08ea7b644892a7d7"/>
 <a href="vulkanrender_8cpp.html#ae623fbfca4c2667c38283347dbac7f7d"/>
 <a href="vulkanrender_8cpp.html#aebc5203c78fecebb868596aae7a90651"/>
 <a href="vulkanrender_8cpp.html#aecb3c98eda669075e9fbdb13df5ad828"/>
 <a href="vulkanrender_8cpp.html#af010b91ee48069c958fdda51f6a88b0c"/>
+<a href="vulkanrender_8cpp.html#af47736f2aec9ab289d45b80b21be15c4"/>
 <a href="vulkanrender_8cpp.html#af60b454bbbb4d3e5033a9c011b4a9a24"/>
 <a href="vulkanrender_8h.html"/>
 <a href="vulkanrender_8h.html#a08886d88b9de590bbba4d6b3bf71ef9a"/>
 <a href="vulkanrender_8h.html#a0c34dbe290e893fd9d2a127f6675b1e6"/>
+<a href="vulkanrender_8h.html#a0d2ea97a68bb142ebdff6a8b1c8060ed"/>
 <a href="vulkanrender_8h.html#a1561ed9a525bb7c26ab677b00d290d8d"/>
+<a href="vulkanrender_8h.html#a1a94f91eef8612ff4c6a4004e5cce9ae"/>
+<a href="vulkanrender_8h.html#a1a94f91eef8612ff4c6a4004e5cce9aeadfa4363ce8d3c4dcc3a7167f2a3b6cfe"/>
 <a href="vulkanrender_8h.html#a2bb55417a01c7a6290f3924810bddeda"/>
 <a href="vulkanrender_8h.html#a318c1b57647d7ba05ed88a48c2a88040"/>
 <a href="vulkanrender_8h.html#a3217acc9533924f0e36f28c310dbdf1f"/>
 <a href="vulkanrender_8h.html#a36907d6bb408c5190bbee74ccf4a5769"/>
 <a href="vulkanrender_8h.html#a4ed7d71d4c4f0869f1680dd5e6e7d7ac"/>
+<a href="vulkanrender_8h.html#a6363320c6a8c33cf49e0fbff7b69ea48"/>
 <a href="vulkanrender_8h.html#a855070ecd52ecca745a2d84fd5a1cf4a"/>
 <a href="vulkanrender_8h.html#a9597f77aab2d4f3b47a4aa36aec497f9"/>
 <a href="vulkanrender_8h.html#a974917ae24bed252b5daea18004d4481"/>
 <a href="vulkanrender_8h.html#a9b6220e29e2fa78788d69857502c892f"/>
+<a href="vulkanrender_8h.html#a9e305a6c80c424e6ebd150b731be60e0"/>
 <a href="vulkanrender_8h.html#aa37dd90535d194a689f4da80b8278da2"/>
 <a href="vulkanrender_8h.html#aaeae770242332e3929d26839f54d9722"/>
 <a href="vulkanrender_8h.html#ab16b70eddff3b4e586bb82859fa0a088"/>
 <a href="vulkanrender_8h.html#ab1721972318e7e714458ba9028f0e6dd"/>
+<a href="vulkanrender_8h.html#aca0a113e5e446155fec0b9b7c2496783"/>
+<a href="vulkanrender_8h.html#aca0a113e5e446155fec0b9b7c2496783aa4d77553a64b3f8c0ce97a2af1a1bdb7"/>
+<a href="vulkanrender_8h.html#aca0a113e5e446155fec0b9b7c2496783ac9c56ef487fdb443dda28e8743cdc316"/>
+<a href="vulkanrender_8h.html#aca0a113e5e446155fec0b9b7c2496783acb8874defab934350ec6a0c9ac2148d1"/>
+<a href="vulkanrender_8h.html#adfaf6a422be66e1daca7ca55415c183d"/>
+<a href="vulkanrender_8h.html#adfaf6a422be66e1daca7ca55415c183da21ff203ce3c02f1f7af0b382f46e1e9c"/>
+<a href="vulkanrender_8h.html#adfaf6a422be66e1daca7ca55415c183da5a076856314e35ee360bc96f76037729"/>
+<a href="vulkanrender_8h.html#adfaf6a422be66e1daca7ca55415c183dadbb69c68ac639b8478aa5f1fecced0ce"/>
+<a href="vulkanrender_8h.html#ae10eea2bc605fe9f08ea7b644892a7d7"/>
+<a href="vulkanrender_8h.html#af1d39d85f1fb8250ac116236739a34bd"/>
+<a href="vulkanrender_8h.html#af1d39d85f1fb8250ac116236739a34bda7436cb6178f53aafd8da9e30761e982f"/>
+<a href="vulkanrender_8h.html#af1d39d85f1fb8250ac116236739a34bdacbceb29580cddb2a5a8ec83ac3877653"/>
 <a href="vulkanrender_8h_source.html"/>
 </body>
 </html>
